// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewWrapper Should render the About view 1`] = `
<Fragment>
  <Memo(Header) />
  <About />
  <Footer />
</Fragment>
`;

exports[`ViewWrapper Should render the Calendar view 1`] = `
<Fragment>
  <Memo(Header) />
  <Calendar />
  <Footer />
</Fragment>
`;

exports[`ViewWrapper Should render the Dashboard view 1`] = `
<Fragment>
  <Memo(Header) />
  <Dashboard />
  <Footer />
</Fragment>
`;

exports[`ViewWrapper Should render the NotFound view 1`] = `
<Fragment>
  <Memo(Header) />
  <NotFound />
  <Footer />
</Fragment>
`;
